# snapr

./: Cargo.toml  LICENSE
.claude/: settings.local.json
libs/snapr/: Cargo.toml
libs/snapr/src/: main.rs
libs/snapr/src/commands/: mod.rs
libs/snapr/src/configuration/: mod.rs
libs/snapr/src/events/: windows.rs
libs/snapr/src/monitor/: mod.rs  windows.rs
src/: main.rs
src/commands/: mod.rs  windows.rs
src/events/: mod.rs
src/monitor/: windows.rs
tauri-app/: package.json  tsconfig.json  vite.config.ts
tauri-app/src/: App.css  main.tsx  routeTree.gen.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: main.rs
tauri-app/src/routes/: __root.tsx
tauri-app/src/routes/(index)/: index.tsx
tauri-app/src/routes/(index)/-components/: position-card.tsx  section-container.tsx  shortcut-form.tsx  shortcut-input.tsx  visual-preview.tsx
tauri-app/src/routes/(index)/-components/lib/: constants.ts  types.ts  utils.ts
